# Autonomous-Navigation-Pipeline

./: .gitignore  README.md
src/jackal_control/cmake/: jackal_controlConfig.cmake
src/jackal_control/config/: robot_localization.yaml
src/jackal_description/urdf/: accessories.urdf.xacro  jackal.urdf.xacro  kinect_gazebo.xacro  lidar_gazebo.xacro
src/jackal_description/urdf/accessories/: hdl32_mount.urdf.xacro  sick_lms1xx_upright_mount.urdf.xacro
src/localization/: CMakeLists.txt  package.xml
src/localization/src/: imuCalibration.py  tfPublisher.py  updatePose.py
src/me5413_world/jackal_control_config/launch/: control.launch
src/me5413_world/launch/: 2kinect.launch  navigation.launch  navigation_agg.launch  navigation_kinect.launch  navigation_sepMap.launch
src/me5413_world/launch/include/: amcl.launch  move_base.launch  move_base_agg.launch  move_base_kinect.launch  move_base_sepMap.launch  spawn_jackal.launch
src/me5413_world/maps/: 28_map_5.yaml  28_map_5_1.yaml  final_map_2.yaml  final_map_4.pgm  final_map_4.yaml
src/me5413_world/params/: costmap_common_params.yaml  costmap_common_params_kinect.yaml
src/me5413_world/params/map_nav_params/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/me5413_world/params_agg/: costmap_common_params.yaml  costmap_common_params_kinect.yaml
src/me5413_world/rviz/: navigation.rviz  navigation_kinect.rviz
src/virtual_wall/: CMakeLists.txt  README.md
src/virtual_wall/scripts/: createWall.py  deleteWall.py
src/virtual_wall/src/: main.cpp
(+3 files in other folders)
